--- a/src/assets/styles/tablet.pcss
+++ b/src/assets/styles/tablet.pcss
@@ -22,6 +22,7 @@
     & nav {
       display: flex !important;
       opacity: 1;
+      visibility: visible;
       transform: scale(1);
       position: static;
       border-radius: 0;
